feat(problem 6): 중복 닉네임 제거 명단 출력